# TorrentLink

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTICE  READEME_zh  READEME_zh.md  README.md  build_compare_metrics.txt  vcpkg.json
.github/workflows/: ci.yml
docs/: HTTP_TRACKER_PLAN.md
scripts/: build.sh  count_code_stats.sh  format.sh  format_check.sh
src/: app_controller.cc  app_controller.h  main.cc
src/app/: CMakeLists.txt  event_ingest_orchestrator.cc  event_ingest_orchestrator.h  exit_coordinator.cc  exit_coordinator.h  refresh_scheduler.cc  refresh_scheduler.h  rss_download_orchestrator.cc  rss_download_orchestrator.h  rss_download_pipeline.cc  rss_download_pipeline.h  task_batch_use_case.cc  task_batch_use_case.h  task_control_command_use_case.cc  task_control_command_use_case.h  task_detail_query_use_case.cc  task_detail_query_use_case.h  task_meta_command_use_case.cc  task_meta_command_use_case.h  task_persistence_coordinator.cc  task_persistence_coordinator.h  task_query_mapper.cc  task_query_mapper.h
src/base/: CMakeLists.txt  clock.cc  clock.h  debounce.cc  debounce.h  errors.cc  errors.h  format.cc  format.h  fs_utils.cc  fs_utils.h  input_sanitizer.cc  input_sanitizer.h  io.cc  io.h  paths.cc  paths.h  process_utils.cc  process_utils.h  ring_buffer.h  system_info.cc  system_info.h  threading.cc  threading.h  throttle.cc  throttle.h  time_format.cc  time_format.h  time_stamps.cc  time_stamps.h  types.h
src/core/: CMakeLists.txt  app_settings.cc  app_settings.h  bencode_minimal.cc  bencode_minimal.h  builtin_http_tracker.cc  builtin_http_tracker.h  config_service.cc  config_service.h  external_player.cc  external_player.h  libtorrent_compat.h  log_store.cc  log_store.h  logger.cc  logger.h  save_path_policy.cc  save_path_policy.h  task_add_builder.cc  task_add_builder.h  task_event.h  task_pipeline.cc  task_pipeline.h  task_pipeline_service.cc  task_pipeline_service.h  task_query_dto.h  task_snapshot.cc  task_snapshot.h  task_state_store.cc  task_state_store.h  torrent_creator.cc  torrent_creator.h
src/core/rss/: rss_dedup.cc  rss_dedup.h  rss_fetcher.cc  rss_fetcher.h  rss_opml.cc  rss_opml.h  rss_parser.cc  rss_parser.h  rss_repository.cc  rss_repository.h  rss_rule_engine.cc  rss_rule_engine.h  rss_series_tracker.cc  rss_series_tracker.h  rss_service.cc  rss_service.h  rss_types.cc  rss_types.h
src/lt/: CMakeLists.txt  add_torrent_torrent_info_ptr.h  error_conversions.cc  error_conversions.h  ip_filter_loader.cc  ip_filter_loader.h  session_cmds.h  session_ids.h  session_ops.h  session_ops_add.cc  session_ops_control.cc  session_ops_dispatch.cc  session_ops_query.cc  session_ops_settings.cc  session_worker.cc  session_worker.h  task_alert_adapter.cc  task_alert_adapter.h  task_event_dispatcher.cc  task_event_dispatcher.h  task_event_mapper.cc  task_event_mapper.h
src/ui/: CMakeLists.txt  add_torrent_dialog.cc  add_torrent_dialog.h  input_ime_utils.cc  input_ime_utils.h  log_center_dialog.cc  log_center_dialog.h  main_window.cc  main_window.h  main_window_actions_context_menu.cc  main_window_actions_menu.cc  main_window_actions_shortcuts.cc  main_window_layout.cc  main_window_state.cc  search_tab.cc  search_tab.h  settings_dialog.cc  settings_dialog.h  system_tray.cc  system_tray.h
src/ui/pages/: transfer_page.cc  transfer_page.h
src/ui/pages/detail/: SpeedChart.qml  content_tree_page.cc  content_tree_page.h  detail_qml.qrc  general_detail_page.cc  general_detail_page.h  http_source_page.cc  http_source_page.h  peer_list_page.cc  peer_list_page.h  speed_chart_model.cc  speed_chart_model.h  speed_chart_page.cc  speed_chart_page.h  task_detail_panel.cc  task_detail_panel.h  tracker_detail_page.cc  tracker_detail_page.h
src/ui/rss/: rss_feeds_page.cc  rss_feeds_page.h  rss_items_page.cc  rss_items_page.h  rss_module_page.cc  rss_module_page.h  rss_rules_page.cc  rss_rules_page.h  rss_series_page.cc  rss_series_page.h  rss_settings_page.cc  rss_settings_page.h
src/ui/state/: state_store.cc  state_store.h
src/ui/widgets/: bottom_status_bar.cc  bottom_status_bar.h
tests/: CMakeLists.txt  test_base_errors.cc  test_builtin_http_tracker.cc  test_clock.cc  test_debounce.cc  test_exit_coordinator.cc  test_format.cc  test_fs_utils.cc  test_input_sanitizer.cc  test_io.cc  test_ip_filter_loader.cc  test_log_store.cc  test_logger.cc  test_lt_error_conversions.cc  test_lt_task_alert_adapter.cc  test_lt_task_event_dispatcher.cc  test_lt_task_event_mapper.cc  test_main.cc  test_main_ui.cc  test_paths.cc  test_process_utils.cc  test_ring_buffer.cc  test_rss_auto_download.cc  test_rss_dedup.cc  test_rss_download_orchestrator.cc  test_rss_download_pipeline.cc  test_rss_opml.cc  test_rss_parser.cc  test_rss_repository.cc  test_rss_rule_engine.cc  test_rss_series_tracker.cc  test_rss_service.cc  test_sanity.cc  test_save_path_policy.cc  test_session_worker.cc  test_system_info.cc  test_task_add_builder.cc  test_task_control_command_use_case.cc  test_task_meta_command_use_case.cc  test_task_pipeline.cc  (+9 more)
tests/qt/: tst_pfd_qt.cpp
